--- a/app/views/course_dates/show.html.erb
+++ b/app/views/course_dates/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <% if @course.bookable? and @course.cost and @course.cost > 0 %>
-    <br />
-    <h4> Booking </h4>
-    <p>
-      If you would like to book a place on <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %>, you can
-    </p>
+  <br />
+  <h4> Booking </h4>
+  <p>
+    If you would like to book a place on <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %>, you can
+  </p>
+  <% if @course.pay_by_card? and @course.cost and @course.cost > 0 %>
     <%= form_tag charge_course_course_date_path(@course,@course_date) do %>
       <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
               data-billing-address="true"
@@ -16,10 +16,14 @@
               data-allow-remember-me="false"></script>
     <% end %>
     <br />
-    or
-    <br />
-    <br />
-    <%= link_to invoice_course_path, :class => "stripe-button-el" do %>
+    <% if @course.pay_by_invoice? %>
+      or
+      <br />
+      <br />
+    <% end %>
+  <% end %>
+  <% if @course.pay_by_invoice? %>
+    <%= link_to invoice_course_course_date_path(@course,@course_date), :class => "stripe-button-copy" do %>
       <span style="display: block; min-height: 30px;">Pay by Invoice</span>
     <% end %>
   <% end %>
