invoice field validation

--- a/app/views/user_mailer/invoice_email.html.erb
+++ b/app/views/user_mailer/invoice_email.html.erb
@@ -7,20 +7,20 @@
   <br />
   Cost: <%= @course.cost %>
   <br />
-  Organisation: <%= @invoice_params[:organisation_name] %>
+  Organisation: <%= @invoice.organisation_name %>
   <br />
   Address:
   <br />
-    <%= @invoice_params[:address_line_1] %>
+    <%= @invoice.address_line_1 %>
   <br />
-    <%= @invoice_params[:address_line_2] %>
+    <%= @invoice.address_line_2 %>
   <br />
-    <%= @invoice_params[:town] %>
+    <%= @invoice.town %>
   <br />
-    <%= @invoice_params[:county] %>
+    <%= @invoice.county %>
   <br />
-    <%= @invoice_params[:postcode] %>
+    <%= @invoice.postcode %>
   <br />
   <br />
-  Telephone: <%= @invoice_params[:telephone_no] %>
+  Telephone: <%= @invoice.telephone_no %>
 </p>
