--- a/app/views/course_dates/invoice.html.erb
+++ b/app/views/course_dates/invoice.html.erb
@@ -1,33 +1,46 @@
 <div class="container">
-  <h3>Please enter your details</h3>
-  <br />
-  <%= simple_form_for :invoice, :url => send_invoice_course_course_date_path(@course,@course_date) do |f| %>
-    <div class="col-md-8">
 
-      <div class="col-md-6">
-        <%= f.input :organisation_name %>
+  <%= simple_form_for @invoice, :url => send_invoice_course_course_date_path(@course,@course_date) do |f| %>
+    <div class="col-md-8">
+      <div class="col-md-12">
+        <br />
+        <h3>Invoice Details</h3>
       </div>
       <div class="col-md-6">
-        <%= f.input :contact_person %>
+        <%= f.input :organisation_name, :required => true %>
       </div>
       <div class="col-md-6">
-        <%= f.input :address_line_1 %>
+        <%= f.input :contact_person, :required => true %>
+      </div>
+      <div class="col-md-6">
+        <%= f.input :address_line_1, :required => true %>
       </div>
       <div class="col-md-6">
         <%= f.input :address_line_2 %>
       </div>
       <div class="col-md-6">
-        <%= f.input :town %>
+        <%= f.input :town, :required => true %>
       </div>
       <div class="col-md-6">
-        <%= f.input :county %>
+        <%= f.input :county, :required => true %>
       </div>
       <div class="col-md-6">
-        <%= f.input :postcode %>
+        <%= f.input :postcode, :required => true %>
       </div>
       <div class="col-md-6">
-        <%= f.input :telephone_no %>
+        <%= f.input :telephone_no, :required => true %>
       </div>
+      <div class="col-md-12">
+        <br />
+        <h3>Attendee Details</h3>
+      </div>
+      <div class="col-md-6">
+        <%= f.input :name, :required => true %>
+      </div>
+      <div class="col-md-6">
+        <%= f.input :email, :required => true %>
+      </div>
+      <br />
     </div>
 
     <div class="col-md-12">
