started space limits

--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -39,6 +39,9 @@
 <div class="col-md-12">
   <h3>Registration and Payment</h3>
   <div class="col-md-4">
+    <%= f.input :send_email %>
+  </div>
+  <div class="col-md-4">
     <%= f.input :show_interest %>
   </div>
   <div class="col-md-4">
