--- a/app/views/admin/course_dates/index.html.erb
+++ b/app/views/admin/course_dates/index.html.erb
@@ -12,12 +12,14 @@
         <tr>
           <th>Date and Time Course Starts</th>
           <th>Duration</th>
+          <th>Spaces</th>
           <th></th>
         </tr>
         <% @course_dates.each do |course_date| %>
           <tr>
             <td><%= course_date.begins_at.try(:strftime, "%d %b %Y %H:%M") %></td>
             <td><%= course_date.duration %> Minutes</td>
+            <td>(<%=course_date.spaces_left %>/<%= course_date.spaces %>)</td>
             <td>
               <% if course_date.disabled? %>
                 <%= link_to "enable", enable_admin_course_course_date_path(course_date.course,course_date) %>
