--- a/app/views/course_dates/show.html.erb
+++ b/app/views/course_dates/show.html.erb
@@ -1,33 +1,39 @@
 <div class="container">
-  <br />
-  <h4> Booking </h4>
-  <% if @course_date.spaces and @course_date.spaces_left? %>
-    <h3><%= @course_date.spaces_left %> <%= @course_date.spaces_left > 1 ? "spaces" : "space" %> left!</h3>
-  <% end %>
-  <p>
-    If you would like to book a place on <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %>, you can
-  </p>
-  <% if @course.pay_by_card? and @course.cost and @course.cost > 0 %>
-    <%= form_tag charge_course_course_date_path(@course,@course_date) do %>
-      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-              data-billing-address="true"
-              data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-              data-description="<%= @course.name %> <%= @course_date.begins_at.try(:strftime, "(%d/%m/%Y)")%>"
-              data-amount="<%= @course.cost * 100 %>"
-              data-currency="gbp"
-              data-locale="auto"
-              data-allow-remember-me="false"></script>
-    <% end %>
+  <div class="panel panel-default">
     <br />
-    <% if @course.pay_by_invoice? %>
-      or
-      <br />
-      <br />
-    <% end %>
-  <% end %>
-  <% if @course.pay_by_invoice? %>
-    <%= link_to invoice_course_course_date_path(@course,@course_date), :class => "stripe-button-copy" do %>
-      <span style="display: block; min-height: 30px;">Pay by Invoice</span>
-    <% end %>
-  <% end %>
+    <div class="panel-heading">Booking</div>
+    <div class="panel-body">
+
+      <% if @course_date.spaces and @course_date.spaces_left? %>
+        <h3><%= @course_date.spaces_left %> <%= @course_date.spaces_left > 1 ? "spaces" : "space" %> left!</h3>
+      <% end %>
+      <p>
+        If you would like to book a place on <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %>, you can
+      </p>
+      <% if @course.pay_by_card? and @course.cost and @course.cost > 0 %>
+        <%= form_tag charge_course_course_date_path(@course,@course_date) do %>
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                  data-billing-address="true"
+                  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                  data-description="<%= @course.name %> <%= @course_date.begins_at.try(:strftime, "(%d/%m/%Y)")%>"
+                  data-amount="<%= @course.cost * 100 %>"
+                  data-currency="gbp"
+                  data-locale="auto"
+                  data-allow-remember-me="false"></script>
+        <% end %>
+        <br />
+        <% if @course.pay_by_invoice? %>
+          or
+          <br />
+          <br />
+        <% end %>
+      <% end %>
+      <% if @course.pay_by_invoice? %>
+        <%= link_to invoice_course_course_date_path(@course,@course_date), :class => "stripe-button-copy" do %>
+          <span style="display: block; min-height: 30px;">Pay by Invoice</span>
+        <% end %>
+      <% end %>
+
+    </div>
+  </div>
 </div>
