--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -58,10 +58,10 @@
         <p>
           <ul>
             <% @course.course_dates.active.each do |course_date| %>
-              <% if @course.pay_by_card? or @course.pay_by_invoice? %>
+              <% if @course.pay_by_card? or @course.pay_by_invoice? and course_date.spaces_left? %>
                 <li><%= link_to course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M (#{course_date.spaces_left})"), course_course_date_path(@course,course_date) %> </li>
               <% else %>
-                <li><%= course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M (#{course_date.spaces_left})") %> </li>
+                <li style="<%= 'text-decoration:line-through;' unless course_date.spaces_left? %>"><%= course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M (#{course_date.spaces_left})") %> </li>
               <% end %>
             <% end %>
           </ul>
