--- a/app/views/admin/course_dates/index.html.erb
+++ b/app/views/admin/course_dates/index.html.erb
@@ -17,7 +17,7 @@
         </tr>
         <% @course_dates.each do |course_date| %>
           <tr>
-            <td><%= course_date.begins_at.try(:strftime, "%d %b %Y %H:%M") %></td>
+            <td><%= course_date.begins_at.try(:strftime, "%d %b %Y %l:%M%P") %></td>
             <td><%= course_date.duration %> Minutes</td>
             <td>(<%=course_date.spaces_left %>/<%= course_date.spaces %>)</td>
             <td>
