--- a/app/views/user_mailer/confirmation_email.html.erb
+++ b/app/views/user_mailer/confirmation_email.html.erb
@@ -17,7 +17,7 @@
   Time: <%= @course_date.begins_at.try(:strftime,"%l:%M%P") %>
   <br />
   <br />
-  For parents who wish to stay there will be free tea, coffee and wifi in the communal area. For parents who wish to leave their children they will be required to leave their name and contact details when dropping off their child.
+  For parents who wish to stay, there will be free tea, coffee and wifi in the communal area. For parents who wish to leave their children they will be required to leave their name and contact details when dropping off their child.
   <br />
   <br />
   If you have any questions please get in touch.
