--- a/app/views/course_dates/charge.html.erb
+++ b/app/views/course_dates/charge.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Thank you</h2>
-  <h4>Your Payment of <strong>£<%= number_with_precision(@course.cost, :precision => 2)%></strong> has been recieved.</h4>
+  <h4>Your Payment of <strong>£<%= number_with_precision(@amount/100, :precision => 2)%></strong> has been recieved.</h4>
   <% if @course.send_email? %>
     <h4>
       You should receive a confirmation email shortly.
