--- a/app/views/course_dates/show.html.erb
+++ b/app/views/course_dates/show.html.erb
@@ -4,22 +4,23 @@
     <div class="panel-heading">Booking</div>
     <div class="panel-body">
 
-      <% if @course_date.spaces and @course_date.spaces_left? %>
-        <h3><%= @course_date.spaces_left %> <%= @course_date.spaces_left > 1 ? "spaces" : "space" %> left!</h3>
+      <% if @course.pay_by_card? and !@course.pay_by_invoice? %>
+        <% if @course_date.spaces and @course_date.spaces_left? %>
+          <h3><%= @course_date.spaces_left %> <%= @course_date.spaces_left > 1 ? "spaces" : "space" %> left!</h3>
+        <% end %>
       <% end %>
       <p>
-        If you would like to book a place on <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P") %>, you can
+        <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P") %>
+        <br />
+        <br />
+        Please select payment type.
       </p>
       <% if @course.pay_by_card? and @course.cost and @course.cost > 0 %>
-        <%= form_tag charge_course_course_date_path(@course,@course_date) do %>
-          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                  data-billing-address="true"
-                  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                  data-description="<%= @course.name %> <%= @course_date.begins_at.try(:strftime, "(%d/%m/%Y)")%>"
-                  data-amount="<%= @course.cost * 100 %>"
-                  data-currency="gbp"
-                  data-locale="auto"
-                  data-allow-remember-me="false"></script>
+        <%= form_tag charge_course_course_date_path(@course,@course_date), :id => 'pay_form' do %>
+          <label for="quantity">Quantity</label>
+          <input type="integer" id="quantity" name="quantity" style="width:40px;" value="1"></input>
+          <button id="customButton">Pay by card</button>
+
         <% end %>
         <br />
         <% if @course.pay_by_invoice? %>
@@ -37,3 +38,58 @@
     </div>
   </div>
 </div>
+<% content_for :footer do %>
+<script src="https://checkout.stripe.com/checkout.js"></script>
+<script>
+  var handler = StripeCheckout.configure({
+    key: '<%= ENV['PUBLISHABLE_KEY'] %>',
+    image: 'https://www.alderhilldigital.co.uk/logo-small.png',
+    locale: 'auto',
+    token: function(token) {
+      var pay_form = document.getElementById('pay_form');
+      var tokenInput = document.createElement("input");
+      tokenInput.type = "hidden";
+      tokenInput.name = "stripeToken";
+      tokenInput.value = token.id;
+      var emailInput = document.createElement("input");
+      emailInput.type = "hidden";
+      emailInput.name = "stripeEmail";
+      emailInput.value = token.email;
+      pay_form.appendChild(tokenInput);
+      pay_form.appendChild(emailInput);
+      pay_form.submit();
+    }
+  });
+
+  document.getElementById('customButton').addEventListener('click', function(e) {
+    // Open Checkout with further options:
+    var quantity = parseInt(document.getElementById('quantity').value);
+
+    if(!isNaN(quantity)){
+      if(quantity > <%= @course_date.spaces_left %>){
+        quantity = <%= @course_date.spaces_left %>;
+        document.getElementById('quantity').value = quantity;
+        alert("There are only "+quantity+" spaces left.");
+      }
+      var amount = <%= @course.cost * 100 %> * quantity;
+    }else{
+      var amount = <%= @course.cost * 100 %>;
+    }
+    handler.open({
+      name: 'Alderhill Digital',
+      description: '<%= @course.name %> <%= @course_date.begins_at.try(:strftime, "(%d/%m/%Y)")%>',
+      zipCode: true,
+      currency: 'gbp',
+      amount: amount,
+      billingAddress: true,
+      allowRememberMe: false
+    });
+    e.preventDefault();
+  });
+
+  // Close Checkout on page navigation:
+  window.addEventListener('popstate', function() {
+    handler.close();
+  });
+</script>
+<% end %>
