--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -54,12 +54,14 @@
       <% end %>
       <br />
       <% if @course.course_dates.active.any? %>
-        <h4> Dates<% if @course.pay_by_card? or @course.pay_by_invoice? %> to Book <% end %></h4>
+        <h4> Dates<% if @course.pay_by_card? %> to Book <% end %></h4>
         <p>
           <ul>
             <% @course.course_dates.active.each do |course_date| %>
               <% if @course.pay_by_card? or @course.pay_by_invoice? and course_date.spaces_left? %>
                 <li><%= link_to course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P (#{course_date.spaces_left})"), course_course_date_path(@course,course_date) %> </li>
+              <% elsif  @course.pay_by_invoice? %>
+                <li><%= course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %> </li>
               <% else %>
                 <li style="<%= 'text-decoration:line-through;' unless course_date.spaces_left? %>"><%= course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M (#{course_date.spaces_left})") %> </li>
               <% end %>
