--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -58,7 +58,7 @@
         <p>
           <ul>
             <% @course.course_dates.active.each do |course_date| %>
-              <% if @course.pay_by_card? or @course.pay_by_invoice? and course_date.spaces_left? %>
+              <% if @course.pay_by_card? and course_date.spaces_left? %>
                 <li><%= link_to course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P (#{course_date.spaces_left})"), course_course_date_path(@course,course_date) %> </li>
               <% elsif  @course.pay_by_invoice? %>
                 <li><%= course_date.begins_at.try(:strftime, "%A %e %b %Y %H:%M") %> </li>
