remove dates for invoice booking

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -53,7 +53,7 @@
         <% end %>
       <% end %>
       <br />
-      <% if @course.course_dates.active.any? %>
+      <% if @course.course_dates.active.any? and @course.pay_by_card? %>
         <h4> Dates<% if @course.pay_by_card? %> to Book <% end %></h4>
         <p>
           <ul>
