--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1265,3 +1265,49 @@
    -o-border-radius: 4px;
    border-radius: 4px;
  }
+
+.choose-time{
+  font-size:3em;
+  line-height:1em;
+  padding:20px;
+  display:inline-block;
+  border: solid 1px #33B9F3;
+  border-radius: 4px;
+  background: #0086C0;
+}
+
+.choose-time a{
+  color: #fff !important;
+  text-decoration:none;
+}
+
+.choose-time-booked{
+  font-size:3em;
+  line-height:1em;
+  padding:20px;
+  display:inline-block;
+  border: solid 1px #33B9F3;
+  border-radius: 4px;
+  background: #DDD;
+  color:gray;
+  text-decoration:line-through;
+}
+
+.choose-next-last{
+  font-size:1.5em;
+  line-height:2em;
+  padding:20px;
+}
+
+.choose-next-last a{
+  color: gray !important;
+  text-decoration:underline;
+}
+
+.grey-panel{
+  padding:20px;
+  display:inline-block;
+  border: solid 1px gray;
+  border-radius: 4px;
+  background: #DDD;
+}
