--- a/app/views/course_dates/show.html.erb
+++ b/app/views/course_dates/show.html.erb
@@ -1,25 +1,32 @@
-<div class="container">
-  <div class="panel panel-default">
-    <br />
-    <div class="panel-heading">Booking</div>
-    <div class="panel-body">
-
+<div class="container" style="text-align:center;">
+  <div class="col-md-12">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-6 grey-panel">
+      <br />
+      <h2>Booking</h2>
       <% if @course.pay_by_card? and !@course.pay_by_invoice? %>
         <% if @course_date.spaces and @course_date.spaces_left? %>
           <h3><%= @course_date.spaces_left %> <%= @course_date.spaces_left > 1 ? "spaces" : "space" %> left!</h3>
         <% end %>
       <% end %>
+
       <p>
-        <%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P") %>
+        <h3><%= @course.name %> on <%= @course_date.begins_at.try(:strftime, "%A %e %b %Y %l:%M%P") %></h3>
         <br />
         <br />
-        Please select payment type.
       </p>
       <% if @course.pay_by_card? and @course.cost and @course.cost > 0 %>
         <%= form_tag charge_course_course_date_path(@course,@course_date), :id => 'pay_form' do %>
           <label for="quantity">Quantity</label>
           <input type="integer" id="quantity" name="quantity" style="width:40px;" value="1"></input>
-          <button id="customButton">Pay by card</button>
+          <br />
+          <br />
+          <button id="customButton" class="stripe-button-copy">
+            <span style="display: block; min-height: 30px;">Pay by card</span>
+          </button>
+          or
+          <%= link_to "Back", :back %>
 
         <% end %>
         <br />
@@ -34,7 +41,9 @@
           <span style="display: block; min-height: 30px;">Pay by Invoice</span>
         <% end %>
       <% end %>
-
+      <br />
+    </div>
+    <div class="col-md-3">
     </div>
   </div>
 </div>
