--- a/app/views/course_dates/invoice.html.erb
+++ b/app/views/course_dates/invoice.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-8">
       <div class="col-md-12">
         <br />
-        <h3>Invoice Details</h3>
+        <h3>Please enter some details so we can send you an invoice.</h3>
       </div>
       <div class="col-md-6">
         <%= f.input :organisation_name, :required => true %>
