--- a/app/views/course_dates/book.html.erb
+++ b/app/views/course_dates/book.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="col-md-8 grey-panel" style="text-align:center;">
       <h1><%= @course.name %></h1>
+
       <h2> Next Session <%= @course_date.begins_at.try(:strftime, "%A %e %b") %> </h2>
       <h3> What time would you like to book ? </h3>
       <br/>
@@ -36,6 +37,9 @@
             <%= link_to "+1 week >>",book_course_course_dates_path(@course,:id => @course_date_next.id) %>
           </div>
         <% end %>
+      </div>
+      <div class="col-md-12">
+        <h3>Please call to book multiple sessions or block book. <b>02870 400 955</b></h3>
       </div>
     </div>
     <div class="col-md-2">
