--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -2,6 +2,10 @@
   <section class="news-box top-margin">
     <div class="container">
       <h2> Bookings </h2>
+      <%= simple_form_for :date_form, :url => admin_bookings_path, :method => :get do |f| %>
+        <%= f.input :date, :as => :select, :collection => @dates, :selected => params[:date_form][:date] %>
+        <%= f.button :submit, "Save" %>
+      <% end %>
       <table class="table table-striped">
         <tr>
           <th>Course</th>
@@ -9,6 +13,7 @@
           <th>Name</th>
           <th>Phone No.</th>
           <th>Email</th>
+          <th>Paid</th>
           <th></th>
         </tr>
         <% @bookings.each do |booking| %>
@@ -18,6 +23,7 @@
             <td><%= booking.name %></td>
             <td><%= booking.telephone %></td>
             <td><%= booking.email %></td>
+            <td><%= booking.paid ? "yes" : "no" %></td>
             <td><%= link_to "edit", edit_admin_booking_path(booking) %></td>
           </tr>
         <% end %>
