--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <h2> Bookings </h2>
       <%= simple_form_for :date_form, :url => admin_bookings_path, :method => :get do |f| %>
-        <%= f.input :date, :as => :select, :collection => @dates, :selected => params[:date_form][:date] %>
+        <%= f.input :date, :as => :select, :collection => @dates, :include_blank => true, :selected => (params[:date_form][:date] if params[:date_form]) %>
         <%= f.button :submit, "Save" %>
       <% end %>
       <table class="table table-striped">
