5 pounds discount per space

--- a/app/views/course_dates/show.html.erb
+++ b/app/views/course_dates/show.html.erb
@@ -91,9 +91,9 @@
       alert("Invalid quantity. Your quantity has been reset to 1.");
       var amount = <%= @course.cost * 100 %>;
     }
-    console.log(amount);
+
     if((<%= @undiscounted_emails.to_json.html_safe %>.indexOf(document.getElementById('discount').value)) >= 0){
-      amount -= 500;
+      amount -= 500*quantity;
     }
     console.log(amount);
     handler.open({
