started banner layout

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,6 +4,11 @@
 <% content_for :meta_description do %>
  : Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
 <% end %>
+<section>
+  <div class="about-banner">
+
+  </div>
+</section>
 <section class="news-box top-margin">
 	<div class="container">
 		<h2><span>About Alderhill Digital</span></h2>
