--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -17,12 +17,14 @@
         Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
         Opened in 2016 the centre quickly established itself and is now approved to deliver vocational qualifications by Innovate Awarding.
         Vocational qualifications allow learners to aquire industry specific skills by providing hands-on training.
+      </p>
+      <p>
         The digital skills sector is a growing one and Alderhill Digital aim to assist anyone to learn and improve.
       </p>
     </div>
     <div class='col-md-12'>
 			<br />
-      <%= image_tag "training-room-pano-3.jpg" %>
+      <%= image_tag "training-room-pano-3.jpg", :style => "width:100%;" %>
     </div>
 
   </div>
@@ -42,7 +44,7 @@
         We desire to build up our learners not just know what to do but help them to be better.
       </p>
     </div>
-    <div class='col-sm-6 col-xs-12'>
+    <div class='col-sm-6 col-xs-12' style="text-align:right;">
       <%= image_tag "training-4.jpg" %>
     </div>
   </div>
