--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -4,6 +4,11 @@
 <% content_for :meta_description do %>
  : Please send us a message. We want to hear your feedback and answer any questions you might have.
 <% end %>
+<section>
+  <div class="contact-banner">
+
+  </div>
+</section>
 <div class='container'>
 
   <%= form_tag do %>
