--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -53,6 +53,9 @@
   <div class="col-md-4">
     <%= f.input :pay_by_invoice %>
   </div>
+  <div class="col-md-4">
+    <%= f.input :disabled %>
+  </div>
   <div class="col-md-12">
     <%= f.input :application_process, :input_html => {:style => "height:200px;"} %>
   </div>
