--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -21,6 +21,9 @@
   <div class="col-md-12">
     <%= f.input :external_link %>
   </div>
+  <div class="col-md-12">
+    <%= f.input :image %>
+  </div>
 </div>
 
 <div class="col-md-12">
