course_date edit

--- a/app/views/admin/course_dates/_form.html.erb
+++ b/app/views/admin/course_dates/_form.html.erb
@@ -1,5 +1,5 @@
 <%= f.input :course_id, :as => :hidden %>
 <%= f.input :begins_at %>
-<%= f.input :duration %>
+<%= f.input :duration, :label => "Duration (minutes)" %>
 <%= f.input :spaces %>
 <%= f.button :submit, "Save" %>
