--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-sm-8">
       <h2><%= @course.name %></h2>
-      <% if @course.image %>
+      <% if @course.image.exists? %>
         <p>
           <%= image_tag @course.image.url(:medium) %>
           <br />
