--- a/app/views/admin/course_dates/edit.html.erb
+++ b/app/views/admin/course_dates/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= simple_form_for @course_date, :url => admin_course_course_dates_path() do |f| %>
+  <%= simple_form_for @course_date, :url => admin_course_course_date_path(@course,@course_date) do |f| %>
     <%= render :partial => 'form', :locals => {:f => f} %>
   <% end %>
 </div>
