--- a/app/views/admin/course_dates/_form.html.erb
+++ b/app/views/admin/course_dates/_form.html.erb
@@ -2,4 +2,5 @@
 <%= f.input :begins_at %>
 <%= f.input :duration, :label => "Duration (minutes)" %>
 <%= f.input :spaces %>
+<%= f.input :description %>
 <%= f.button :submit, "Save" %>
