terms and conditions

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -1339,3 +1339,11 @@
 .booking-table td{
   padding: 0 20px 0 0;
 }
+
+blockquote{
+  font-size: 1em;
+  font-style: normal;
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  color: #6E6E6E;
+}
