front page course links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -96,7 +96,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag("news6.png", :alt => "html5 css js icons") %></figure>
+						<figure><%= link_to image_tag("news6.png", :alt => "html5 css js icons"), course_path("web-design-and-development") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
@@ -111,7 +111,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag("news5.jpg", :alt => "linux icon") %></figure>
+						<figure><%= link_to image_tag("news5.jpg", :alt => "linux icon"), course_path("getting-started-with-linux") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
@@ -126,7 +126,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag("news8.jpg", :alt => "flow diagram") %></figure>
+						<figure><%= link_to image_tag("news8.jpg", :alt => "flow diagram"), course_path("building-a-website") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
