--- a/app/views/home/terms_and_conditions.html.erb
+++ b/app/views/home/terms_and_conditions.html.erb
@@ -14,7 +14,7 @@
   <p>
     <ol style="line-height:2em;">
       <li>The promoter is: Alderhill Digital Ltd (company no. NI64495.) whose registered office is at 1 Hillman's Court, Coleraine, BT52 2DF.</li>
-      <li>The competition is open to residents of the United Kingdom aged X years or over except employees of Alderhill Digital Ltd and their close relatives and anyone otherwise connected with the organisation or judging of the competition.</li>
+      <li>The competition is open to residents of the United Kingdom aged 16 years or over except employees of Alderhill Digital Ltd and their close relatives and anyone otherwise connected with the organisation or judging of the competition.</li>
       <li>There is no entry fee and no purchase necessary to enter this competition.</li>
       <li>By entering this competition, an entrant is indicating his/her agreement to be bound by these terms and conditions.</li>
       <li>Route to entry for the competition and details of how to enter will be received upon registration.</li>
